:lipstick: Fix icon alignment in form builder

--- a/src/openforms/forms/static/forms/scss/components/builder/_builder.scss
+++ b/src/openforms/forms/static/forms/scss/components/builder/_builder.scss
@@ -6,7 +6,7 @@
 
 .field-configuration {
 
-  div:first-of-type {
+  & > div:first-of-type {
     width: 100%;
   }
 
